[gd_scene load_steps=8 format=3 uid="uid://8tnuhtgcbbmq"]

[ext_resource type="Texture2D" uid="uid://lwbakpr0vvye" path="res://graphics/car/main.png" id="1_s64lo"]
[ext_resource type="Script" path="res://scenes/enemies/car.gd" id="1_um0d2"]
[ext_resource type="Texture2D" uid="uid://ccoev8fi7viq3" path="res://graphics/car/turret.png" id="3_yxrqx"]
[ext_resource type="Texture2D" uid="uid://3541dj2ej6wv" path="res://graphics/explosions/gun.png" id="4_pm8m5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8d31r"]
radius = 1035.04

[sub_resource type="Animation" id="Animation_a4ll2"]
resource_name = "laser_load"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Turret/RayCast2D/Line2D:width")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.9, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 10.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Turret/RayCast2D2/Line2D2:width")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 1.9, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 10.0, 0.0]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.9),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"fire"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qd8vt"]
_data = {
"laser_load": SubResource("Animation_a4ll2")
}

[node name="Car" type="PathFollow2D"]
script = ExtResource("1_um0d2")

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
collision_layer = 2
collision_mask = 11

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="CharacterBody2D"]
polygon = PackedVector2Array(-170, -173, -40, -171, -30, -138, -34, -98, 3, -132, 62, -119, 66, -168, 204, -161, 230, -118, 233, 46, 230, 119, 205, 158, 169, 165, 63, 165, 59, 118, 3, 131, -33, 99, -39, 171, -170, 171, -168, 111, -173, 49, -219, 49, -238, 30, -239, -32, -217, -50, -173, -49, -172, -82, -146, -79, -149, -108, -172, -109)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(57, 0)
rotation = 1.5708
texture = ExtResource("1_s64lo")

[node name="NoticeArea" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="NoticeArea"]
shape = SubResource("CircleShape2D_8d31r")

[node name="Turret" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Turret"]
rotation = 1.5708
texture = ExtResource("3_yxrqx")

[node name="RayCast2D" type="RayCast2D" parent="Turret"]
position = Vector2(113, -25)
target_position = Vector2(900, 0)

[node name="Line2D" type="Line2D" parent="Turret/RayCast2D"]
points = PackedVector2Array(0, 0, 914, 4)
default_color = Color(1, 0.227451, 0.301961, 0.34902)

[node name="RayCast2D2" type="RayCast2D" parent="Turret"]
position = Vector2(112, 30)
target_position = Vector2(900, 0)

[node name="Line2D2" type="Line2D" parent="Turret/RayCast2D2"]
points = PackedVector2Array(0, 0, 0, 0, 913, 1)
default_color = Color(1, 0.227451, 0.301961, 0.337255)

[node name="GunFire1" type="Sprite2D" parent="Turret"]
modulate = Color(1, 1, 1, 0)
position = Vector2(249, -26)
rotation = 1.5708
scale = Vector2(0.6, 1)
texture = ExtResource("4_pm8m5")

[node name="GunFire2" type="Sprite2D" parent="Turret"]
modulate = Color(1, 1, 1, 0)
position = Vector2(249, 28)
rotation = 1.5708
scale = Vector2(0.6, 1)
texture = ExtResource("4_pm8m5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qd8vt")
}

[connection signal="body_entered" from="NoticeArea" to="." method="_on_notice_area_body_entered"]
[connection signal="body_exited" from="NoticeArea" to="." method="_on_notice_area_body_exited"]
